# eigenstrapping

./: .buildinfo  .readthedocs.yaml  MANIFEST.in  README.md  README.rst  api.html  environment.yml  genindex.html  getting_started.html  index.html  install.html  objects.inv  py-modindex.html  pyproject.toml  references.html  requirements.txt  search.html  searchindex.js  setup.py  sg_execution_times.html  usage.html
.github/workflows/: docs.yml  tests.yml
_downloads/4ead12ed6a97c69ab4cf6d95b2218932/: plot_surface_examples.ipynb
_downloads/9a387a1cf287bc680523a7a577f20027/: plot_surface_examples.py
_modules/: index.html
_modules/eigenstrapping/: base.html  dataio.html  fit.html  geometry.html  plotting.html  rotations.html  stats.html  utils.html
_modules/eigenstrapping/datasets/: base.html
_sources/: api.rst.txt  getting_started.rst.txt  install.rst.txt  sg_execution_times.rst.txt
_sources/auto_examples/: index.rst.txt  plot_surface_examples.rst.txt  sg_execution_times.rst.txt
_sources/tutorials/: base.rst.txt  rotations.rst.txt  tutorial_ownsurface.rst.txt  tutorial_subcortex.rst.txt
_static/: documentation_options.js  theme_overrides.css
_static/docs/: getting_started.rst  install.rst
auto_examples/: index.html  plot_surface_examples.html  sg_execution_times.html
docs/: api.rst  conf.py  getting_started.rst  index.rst  install.rst  references.rst  sg_execution_times.rst  usage.rst
docs/_build/doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree  install.doctree  references.doctree  usage.doctree
docs/_build/doctrees/tutorials/: tutorial_cortex.doctree  tutorial_ownsurface.doctree  tutorial_subcortex.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  install.html  objects.inv  references.html  search.html  searchindex.js  usage.html
docs/_build/html/_sources/: api.rst.txt  getting_started.rst.txt  index.rst.txt  references.rst.txt
docs/_build/html/_sources/tutorials/: tutorial_cortex.rst.txt  tutorial_ownsurface.rst.txt
docs/_build/html/tutorials/: tutorial_cortex.html  tutorial_ownsurface.html  tutorial_subcortex.html
docs/auto_examples/: index.rst  plot_surface_examples.py.md5  plot_surface_examples_codeobj.pickle  searchindex.db
docs/tutorials/: datasets.rst  geometry.rst  rotations.rst  tutorial_cortex.rst  tutorial_ownsurface.rst  tutorial_subcortex.rst
eigenstrapping/: __init__.py  base.py  dataio.py  fit.py  geometry.py  parutils.py  plotting.py  rotations.py  spatial.py  stats.py  utils.py
eigenstrapping.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
eigenstrapping/datasets/: __init__.py  base.py  osf.json  utils.py
eigenstrapping/datasets/HCP/: 102816.L.MyelinMap_BC.164k_fs_LR.func.gii  102816.L.corrThickness.164k_fs_LR.shape.gii  102816.L.midthickness_MSMAll.164k_fs_LR.surf.gii
eigenstrapping/datasets/HarvardOxford/: hcp_hippo-lh_gradient_1.txt  hcp_stri-lh_gradient_1.txt  hcp_tha-lh_gradient_1.txt
eigenstrapping/datasets/brainmaps/: fsLR32k_lh.gii  fsLR32k_rh.gii  fsaverage5_lh.gii  fsaverage5_rh.gii  hcp_example_contrast.txt  nsynth_gradient_lh.txt
eigenstrapping/datasets/masks/: fsaverage5_lh.txt  fsaverage5_rh.txt
examples/: README.txt
tutorials/: base.html  datasets.html  geometry.html  rotations.html  tutorial_cortex.html  tutorial_ownsurface.html  tutorial_subcortex.html
