[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
]
install_requires = [
  "netneurotools @ git+https://github.com/nikitas-k/netneurotools-scipyfix.git@main"
]


[project]
name = "eigenstrapping"
version = "0.0.1.11"
description = "For generating surrogate brain maps with spatial autocorrelation using geometric eigenmodes."
readme = "README.rst"
authors = [
    {name = "Nikitas C. Koussis", email = "nikitas.koussis@gmail.com"},
]
license = { file = "LICENSE" }
dependencies = [
  "brainsmash==0.11.0",
  "brainspace==0.1.10",
  "joblib",
  "parspin",
  "lapy==1.0.1",
  "matplotlib",
  "neuromaps",
  "nibabel",
  "nilearn<=0.10.2",
  "numpy",
  "pandas",
  "scipy>=0.11",
  "seaborn",
  "tqdm",
  "netneurotools @ git+https://github.com/nikitas-k/netneurotools_scipyfix.git@main"
]
maintainers = [
  {name = "Systems Neuroscience Group Newcastle", email = "nikitas.koussis@gmail.com"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only"
]

[project.optional-dependencies]
doc = [
  "sphinx >=2.0, <7.0.0",
  "sphinx_rtd_theme",
  "sphinx-gallery"
]
style = [
  "flake8"
]
test = [
  "netneurotools",
  "coverage",
  "pytest >=3.6",
  "pytest-cov",
]

[project.urls]
Source = "https://github.com/SNG-newy/eigenstrapping"
Documentation = "https://github.com/SNG-newy/eigenstrapping"

