[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=42",
    "wheel",
]
install_requires = [
  "netneurotools>=0.2.4"
]


[project]
name = "eigenstrapping"
version = "0.1"
description = "For generating surrogate brain maps with spatial autocorrelation using geometric eigenmodes."
authors = [
    {name = "Nikitas C. Koussis", email = "nikitas.koussis@gmail.com"},
]
license = { file = "LICENSE" }
dependencies = [
  "brainspace",
  "joblib",
  "lapy>=1.0.1",
  "matplotlib<=3.8.4",
  "neuromaps",
  "nibabel",
  "nilearn<=0.10.2",
  "numpy",
  "scipy>=0.11",
  "seaborn",
  "netneurotools>=0.2.4",
  "tqdm",
  "parspin"
]
maintainers = [
  {name = "Systems Neuroscience Group Newcastle", email = "nikitas.koussis@gmail.com"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only"
]

[project.optional-dependencies]
doc = [
  "sphinx >=2.0, <7.0.0",
  "sphinx_rtd_theme",
  "sphinx-gallery"
]
style = [
  "flake8"
]
test = [
  "netneurotools",
  "coverage",
  "pytest >=3.6",
  "pytest-cov",
]

[project.urls]
Source = "https://github.com/SNG-newy/eigenstrapping"
Documentation = "https://github.com/SNG-newy/eigenstrapping"

